syntax = "proto3";

option csharp_namespace = "beholder_occipital_v1.Protos";

package occipital.object_detection;

// The request message containing the object detection request
message ObjectDetectionRequest {
    string queryImagePrefrontalKey = 1;
    string targetImagePrefrontalKey = 2;
    message MatchMaskSettings {
        float RatioThreshold = 1;
        float ScaleIncrement = 2;
        int32 RotationBins = 3;
    }
    optional MatchMaskSettings matchMaskSettings = 3;
    optional string outputImagePrefrontalKey = 10;
}

message ObjectPoly {
    message Point {
        int32 x = 1;
        int32 y = 2;
    }
    repeated Point points = 1;
}

message ObjectDetectionReply {
  repeated ObjectPoly locations = 1;
}
